@@ -597,7 +597,8 @@ $t->get_ok('/static.txt' => {Range => 'bytes=2-5'})->status_is(206)->header_is(S
   ->header_is('Accept-Ranges' => 'bytes')->header_is('Content-Length' => 4)->content_is('st s');
 
 # Protected DATA template
-$t->get_ok('/template.txt.epl')->status_is(404)->header_is(Server => 'Mojolicious (Perl)')->content_like(qr/Oops!/);
+$t->get_ok('/template.txt.epl')->status_is(500)->header_is(Server => 'Mojolicious (Perl)')
+  ->content_like(qr/Nothing found to render/);
 
 # Captured "0"
 $t->get_ok('/null/0')->status_is(200)->header_is(Server => 'Mojolicious (Perl)')->content_is('0');
