@@ -31,7 +31,7 @@ $t->get_ok('/hello.txt')->status_is(200)->header_is(Server => 'Mojolicious (Perl
   ->content_like(qr/Hello Mojo from a static file!/);
 
 # Foo::bar in testing mode (missing action)
-$t->get_ok('/foo/baz')->status_is(404)->header_is(Server => 'Mojolicious (Perl)')->content_like(qr/Testing not found/);
+$t->get_ok('/foo/baz')->status_is(500)->header_is(Server => 'Mojolicious (Perl)')->content_like(qr/Testing/);
 
 # Try to access a file which is not under the web root via path traversal in
 # testing mode
