@@ -17,6 +17,7 @@
   - Improved Mojolicious::Routes to throw exceptions for missing controllers.
   - Improved Mojolicious::Routes to throw exceptions for routes with controllers but without action.
   - Improved Mojolicious::Routes to disallow namespace without controller for routing.
+  - Improved Mojolicious::Routes to die if auto rendering failed.
   - Improved render method in Mojolicious::Controller to die if no response could be rendered.
   - Improved contextual logging feature in Mojo::Log not to concatenate log messages and context.
   - Improved all_text method in Mojo::DOM to exclude "<script>" and "<style>" from text extraction in HTML documents.
